# wformat

./: .gitattributes  .gitignore  .vscodeignore  CMakeLists.txt  COPILOT.md  DEVELOPER.md  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml  rd-format.spec  setup.py  tsconfig.json  wformat.spec
.github/actions/setup-action/: action.yml
.github/workflows/: build-vs-extension.yml  build-vscode-extension.yml  copilot-setup-steps.yml  publish-to-pypi.yml  pypi.publish.yml  tests.yml
extensions/vs/: AssemblyInfo.cs  Commands.vsct  FormatWithRdFormat.cs  Logger.cs  OptionsPage.cs  README.md  RdFormatDaemon.cs  RdFormatOptions.cs  RdFormatPackage.cs  RdFormatVS.csproj  RightClickMenuButtonCommand.cs  VSCommandTable.vsct  WFormatDaemon.cs  WFormatVSIX.csproj  WFormatVSIXPackage.cs  source.extension.vsixmanifest
extensions/vs/Properties/: AssemblyInfo.cs
extensions/vscode/: README.md  vscode.ts
scripts/: build-vsix.ps1  self_clean_configs.py  set_version.py
src/: rd_format_launcher.py  wformat_launcher.py
src/rd_format/: clang_format.py  cli_app.py  daemon.py  rd_format.py  uncrustify.py  utils.py
src/rd_format/data/: .clang-format  uncrustify.cfg
src/wformat/: cli_app.py  normalizer.py  uncrustify.py  utils.py  wformat.py
tests/rd_format/: test_clang_format.py  test_cli_app.py  test_rd_format.py  test_uncrustify.py
tests/sample/: conditionals.correct.cpp  enum.correct.cpp  enum.cpp  enum_stream.cpp  iterator.correct.cpp  lambda.correct.cpp  lambda.cpp  macros.cpp  nodiscard.correct.cpp  nodiscard.cpp  params_break.correct.cpp  params_break.cpp  qsort.correct.cpp  qsort.cpp  return.correct.cpp  return.cpp  smartptr_nested.correct.cpp  templates_sfinae.correct.cpp  windows_seh.correct.cpp  windows_seh.cpp
tests/sample/new/: constexpr.correct.cpp  constexpr.cpp  iterator.correct.cpp  iterator.cpp  smart_break_params.correct.cpp  smart_break_params.cpp  unref.correct.cpp  unref.cpp
tests/sample/required/: conditionals.correct.cpp  conditionals.cpp  custom_deleter.correct.cpp  custom_deleter.cpp  enum_stream.correct.cpp  enum_stream.cpp  iterator.correct.cpp  iterator.cpp  macros.correct.cpp  macros.cpp  marco_in_func_def.correct.cpp  marco_in_func_def.cpp  nodiscard.correct.cpp  nodiscard.cpp  params_break.correct.cpp  params_break.cpp  qsort.correct.cpp  qsort.cpp  smartptr_nested.correct.cpp  smartptr_nested.cpp  templates_sfinae.correct.cpp  templates_sfinae.cpp  windows_seh.correct.cpp  windows_seh.cpp
tests/wformat/: test_new_samples.py  test_required_samples.py  test_samples.py  test_sanity.py  test_stdin_pipeline.py
tools/: make-vsix.js
