[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wformat"
version = "0.0.1"
license = { text = "MIT" }
authors = [{ name = "Ziwei Wei" }]
requires-python = ">=3.8"
readme = "README.md"
description = "Opinionated code formatter for C++ code."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
wformat = "wformat.cli_app:cli_app"

[project.optional-dependencies]
test = ["pytest>=7.0"]
build = ["build", "twine", "wheel", "pyinstaller>=6.15,<7"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wformat = ["data/*", "bin/*"]